# hajimi

./: .gitignore  CLI_USAGE.md  README-zh.md  README.md  SKILL.md  pyproject.toml  test_cli.py  test_conversation_bug.py  test_file.txt  test_mcp.py
references/: api-reference.md  setup.md  troubleshooting.md
src/: client.py  db.py  models.py  server.py
src/cli/: auth.py  chat.py  generate.py  main.py  mcp_server.py  session.py
