[project]
name = "hajimi"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "gemini-webapi>=1.0.0",
    "aiosqlite>=0.20.0",
    "click>=8.0.0",
    "browser-cookie3>=0.20.1",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[project.scripts]
gemini-web = "src.cli.main:main"
